--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "@angular/platform-browser": "^11.2.0",
     "@angular/platform-browser-dynamic": "^11.2.0",
     "@angular/router": "^11.2.0",
+    "@ngrx/store": "^11.1.0",
+    "@ngrx/store-devtools": "^11.1.0",
     "@nrwl/angular": "11.6.1",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
@@ -50,6 +52,8 @@
     "@angular/cli": "~11.0.0",
     "@angular/compiler-cli": "^11.2.0",
     "@angular/language-service": "^11.2.0",
+    "@ngrx/schematics": "^11.1.0",
+    "@ngrx/store-devtools": "^11.0.0",
     "@nrwl/cli": "11.6.1",
     "@nrwl/cypress": "11.6.1",
     "@nrwl/eslint-plugin-nx": "11.6.1",
